--- a/.config/sway/config
+++ b/.config/sway/config
@@ -85,6 +85,7 @@ input "2:7:SynPS\/2_Synaptics_TouchPad" {
 #
     # Start a terminal
     bindsym $mod+Return exec $term
+    bindsym $mod+b exec firefox
 
     # Kill focused window
     bindsym $mod+Shift+q kill
@@ -180,8 +181,6 @@ bindsym XF86Search exec $menu
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
     bindsym $mod+s layout stacking
