--- a/.config/sway/config
+++ b/.config/sway/config
@@ -23,7 +23,7 @@ set $term kitty
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 set $menu wofi --gtk-dark --show drun 
-set $lock swaylock --screenshots --clock --indicator --indicator-radius 80 -indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 323232 --key-hl-color 285577 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --fade-in 0.2
+set $lock swaylock --screenshots --clock --indicator --indicator-radius 80 -indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 323232 --key-hl-color 285577 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --fade-in 0.2 -K
 
 font pango:JetBrainsMono Nerd Font Mono 9
 
