--- a/.config/sway/config
+++ b/.config/sway/config
@@ -106,6 +106,9 @@ input "2:7:SynPS\/2_Synaptics_TouchPad" {
     # Lock screen
     bindsym $mod+Alt+l exec $lock
 
+    # Launch clipboard history
+    bindsym $mod+v exec "cliphist list | wofi --show dmenu | cliphist decode | wl-copy"
+
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
@@ -260,5 +263,6 @@ bar {
 
 exec mako
 exec kdeconnect-indicator
+exec_always wl-paste --watch cliphist store
 
 include /etc/sway/config.d/*
