--- a/.config/sway/config
+++ b/.config/sway/config
@@ -42,11 +42,8 @@ output * bg /home/dmytro/Pictures/Wallpapers/arch.png fill
 ### Idle configuration
 #
 # Example configuration:
-#
-exec swayidle -w \
-          timeout 300 $lock \
-          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-          before-sleep $lock
+#"
+exec_always swayidle -w before-sleep "swaylock --screenshots --clock --indicator --indicator-radius 80 -indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 323232 --key-hl-color 285577 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --fade-in 0.2 -K"
 
 bindswitch --reload --locked lid:on exec $lock 
 
