--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -97,14 +97,15 @@ $mainMod = SUPER
 # Binds
 
 bind = $mainMod, RETURN, exec, kitty
-bind = $mainMod SHIFT, Q, killactive, 
-bind = $mainMod SHIFT, E, exit, 
-bind = $mainMod SHIFT, space, togglefloating,
-bind = $mainMod, V, exec, cliphist list | sort -hr | wofi --show dmenu | cliphist decode | wl-copy 
+bind = $mainMod SHIFT, Q, killactive
+bind = $mainMod SHIFT, E, exit
+bind = $mainMod SHIFT, space, togglefloating
+bind = $mainMod, V, exec, cliphist list | sort -hr | wofi --show dmenu -k /dev/null | cliphist decode | wl-copy 
 bind = $mainMod, D, exec, wofi --show drun
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, E, togglesplit, # dwindle
+bind = $mainMod, P, pseudo # dwindle
+bind = $mainMod, E, togglesplit # dwindle
 bind = $mainMod, W, toggleGroup
+bind = $mainMod SHIFT, W, moveoutofgroup
 bind = , Print, exec, grimshot copy anything
 bind = $mainMod, F, fullscreen
 bind = $mainMod, L, exec, swaylock --screenshots --clock --indicator --indicator-radius 80 -indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 323232 --key-hl-color 285577 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --fade-in 0.2 -K 
