--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -161,3 +161,15 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Functional keys
+bind =, XF86AudioRaiseVolume, exec, amixer set Master 5%+
+bind =, XF86AudioLowerVolume, exec, amixer set Master 5%-
+bind =, XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind =, XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind =, XF86MonBrightnessDown, exec, brightnessctl set 5%-
+bind =, XF86MonBrightnessUp, exec, brightnessctl set 5%+
+bind =, XF86AudioPlay, exec, playerctl play-pause
+bind =, XF86AudioNext, exec, playerctl next
+bind =, XF86AudioPrev, exec, playerctl previous
+bind =, XF86Search, exec, wofi --show drun
