--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,7 +7,8 @@ monitor=eDP-1,1920x1080@60,0x0,1
 
 # Auto launch
 exec-once = waybar
-exec-once = swaync 
+exec-once = swaync
+exec-once = hyprpaper
 exec-once = wl-paste --watch cliphist store -max-items 1000
 exec-once = swayidle -w before-sleep "swaylock --screenshots --clock --indicator --indicator-radius 80 -indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 323232 --key-hl-color 285577 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --fade-in 0.2 -K"
 
@@ -107,6 +108,8 @@ bind = $mainMod, E, togglesplit # dwindle
 bind = $mainMod, W, toggleGroup
 bind = $mainMod SHIFT, W, moveoutofgroup
 bind = , Print, exec, grimshot copy anything
+bind = SHIFT, Print, exec, hyprshot --clipboard-only -m window 
+bind = $mainMod, F, fullscreen
 bind = $mainMod, F, fullscreen
 bind = $mainMod, L, exec, swaylock --screenshots --clock --indicator --indicator-radius 80 -indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 323232 --key-hl-color 285577 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --fade-in 0.2 -K 
 bind = $mainMod, N, exec, swaync-client -t -sw
