Hypland new groups config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,10 +38,20 @@ general {
     border_size = 2
     col.active_border = rgba(8ff0a4aa) rgba(2ec27eaa) 45deg
     col.inactive_border = rgba(595959aa)
-    col.group_border = rgba(595959aa)
-    col.group_border_active = rgba(8ff0a4aa) rgba(2ec27eaa) 45deg
-    
     layout = dwindle
+}
+
+group {
+
+    col.border_active = rgba(8ff0a4aa) rgba(2ec27eaa) 45deg
+    col.border_inactive = rgba(595959aa)
+
+    groupbar {
+        render_titles = 0
+        gradients = 0
+        col.active = rgba(8ff0a4aa) rgba(2ec27eaa) 45deg
+        col.inactive = rgba(595959aa)
+    }
 }
 
 decoration {
@@ -90,7 +100,6 @@ device:epic-mouse-v1 {
 }
 
 misc {
-    render_titles_in_groupbar = 0 
 }
 
 $mainMod = SUPER
