--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -105,7 +105,6 @@ misc {
 $mainMod = SUPER
 
 # Binds
-
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod SHIFT, Q, killactive
 bind = $mainMod SHIFT, E, exit
@@ -139,6 +138,18 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+# Moving worspaces
+bind = $mainMod CTRL, 1, movecurrentworkspacetomonitor, 0
+bind = $mainMod CTRL, 2, movecurrentworkspacetomonitor, 1
+bind = $mainMod CTRL, 3, movecurrentworkspacetomonitor, 2
+bind = $mainMod CTRL, 4, movecurrentworkspacetomonitor, 3
+bind = $mainMod CTRL, 5, movecurrentworkspacetomonitor, 4
+bind = $mainMod CTRL, 6, movecurrentworkspacetomonitor, 5
+bind = $mainMod CTRL, 7, movecurrentworkspacetomonitor, 6
+bind = $mainMod CTRL, 8, movecurrentworkspacetomonitor, 7
+bind = $mainMod CTRL, 9, movecurrentworkspacetomonitor, 8
+bind = $mainMod CTRL, 0, movecurrentworkspacetomonitor, 9
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
