--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,6 +11,7 @@ exec-once = swaync
 exec-once = hyprpaper
 exec-once = wl-paste --watch cliphist store -max-items 1000
 exec-once = swayidle -w before-sleep "swaylock --screenshots --clock --indicator --indicator-radius 80 -indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 323232 --key-hl-color 285577 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --fade-in 0.2 -K"
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
