--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,19 +2,17 @@
 
 # Monitor setup
 
-monitor=,preferred,auto,auto
-monitor=eDP-1,1920x1080@60,0x0,1
+source = ~/.config/hypr/monitors.conf
 
 # Auto launch
 exec-once = waybar
-exec-once = swaync
 #exec-once = hyprpaper
 exec-once = wl-paste --watch cliphist store -max-items 1000
-exec-once = swayidle -w before-sleep "swaylock --screenshots --clock --indicator --indicator-radius 80 -indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 323232 --key-hl-color 285577 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --fade-in 0.2 -K"
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = HYPRSHOT_DIR,~/Pictures/Screenshots
 
 # Default config categories
 input {
@@ -29,13 +27,13 @@ input {
     touchpad {
         natural_scroll = no
     }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    accel_profile = flat
+    sensitivity = -0.7 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
     gaps_in = 5
-    gaps_out = 15
+    gaps_out = 10
     border_size = 2
     col.active_border = rgba(8ff0a4aa) rgba(2ec27eaa) 45deg
     col.inactive_border = rgba(595959aa)
@@ -64,10 +62,12 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+	enabled = true
+    	range = 4
+    	render_power = 3
+        color = rgba(1a1a1aee)
+    }
 }
 
 animations {
@@ -89,7 +89,7 @@ dwindle {
 }
 
 master {
-    new_is_master = true
+    new_status = "master"
 }
 
 gestures {
@@ -112,10 +112,10 @@ bind = $mainMod, P, pseudo # dwindle
 bind = $mainMod, E, togglesplit # dwindle
 bind = $mainMod, W, toggleGroup
 bind = $mainMod SHIFT, W, moveoutofgroup
-bind = , Print, exec, grimshot copy anything
+bind = , Print, exec, hyprshot -m region
 bind = SHIFT, Print, exec, hyprshot --clipboard-only -m window 
 bind = $mainMod, F, fullscreen
-bind = $mainMod, L, exec, swaylock --screenshots --clock --indicator --indicator-radius 80 --indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 323232 --key-hl-color 285577 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --fade-in 0.2 -K 
+bind = $mainMod, L, exec, hyprlock 
 bind = $mainMod, N, exec, swaync-client -t -sw
 
 # Move focus with mainMod + arrow keys
