--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,6 +13,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = HYPRSHOT_DIR,~/Pictures/Screenshots
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # Default config categories
 input {
@@ -73,14 +74,12 @@ decoration {
 animations {
     enabled = yes
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 5, myBezier
-    animation = windowsOut, 1, 5, default, popin 80%
-    animation = border, 1, 8, default
-    animation = borderangle, 1, 6, default
-    animation = fade, 1, 5, default
-    animation = workspaces, 1, 4, default
+    animation = windows, 1, 2, default
+    animation = windowsOut, 1, 2, default, popin 80%
+    animation = border, 1, 5, default
+    animation = borderangle, 1, 5, default
+    animation = fade, 1, 3, default
+    animation = workspaces, 1, 5, default
 }
 
 dwindle {
