--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-env = HYPRSHOT_DIR,~/Pictures/Screenshots
+env = HYPRSHOT_DIR,$HOME/Pictures/Screenshots
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # Default config categories
