--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,6 +6,7 @@ source = ~/.config/hypr/monitors.conf
 
 # Auto launch
 exec-once = waybar
+exec-once = hypridle
 #exec-once = hyprpaper
 exec-once = wl-paste --watch cliphist store -max-items 1000
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
