Update hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,6 +3,7 @@
 # Monitor setup
 
 source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/inputs.conf
 
 # Auto launch
 exec-once = waybar
@@ -17,21 +18,24 @@ env = HYPRSHOT_DIR,$HOME/Pictures/Screenshots
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # Default config categories
-input {
-    kb_layout = us,ua
-    kb_variant =
-    kb_model =
-    kb_options = grp:caps_toggle
-    kb_rules =
 
-    follow_mouse = 1
+# Copy input to .config/hypr/input.conf and adjust
 
-    touchpad {
-        natural_scroll = no
-    }
-    accel_profile = flat
-    sensitivity = -0.7 # -1.0 - 1.0, 0 means no modification.
-}
+#input { 
+#    kb_layout = us,ua
+#    kb_variant =
+#    kb_model =
+#    kb_options = grp:caps_toggle
+#    kb_rules =
+#
+#    follow_mouse = 1
+#
+#    touchpad {
+#        natural_scroll = no
+#    }
+#    accel_profile = flat
+#    sensitivity = 1.0 # -1.0 - 1.0, 0 means no modification.
+#}
 
 general {
     gaps_in = 5
@@ -92,9 +96,8 @@ master {
     new_status = "master"
 }
 
-gestures {
-    workspace_swipe = on
-}
+# Gestures
+gesture = 3, horizontal, workspace
 
 misc {
 }
