Hypland update workspace change on mouse scroll

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -177,8 +177,8 @@ bind = $mainMod ALT, right, movegroupwindow, f
 bind = $mainMod ALT, left, movegroupwindow, b
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e-1
-bind = $mainMod, mouse_up, workspace, e+1
+bind = $mainMod, mouse_down, workspace, m-1
+bind = $mainMod, mouse_up, workspace, m+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
