Hypland add default workspace names

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -104,6 +104,11 @@ misc {
 
 $mainMod = SUPER
 
+# Workspaces config
+workspace = 1,defaultName:Firefox
+workspace = 2,defaultName:Terminal
+workspace = 3,defaultName:Messengers
+
 # Binds
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod SHIFT, Q, killactive
